--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Know Better based on Icebreakers</title>
+  <title>KnowBetter based on Icebreakers</title>
   <meta charset="utf-8" />
   <meta name="description" content="A collection of icebreaking questions from around the web" />
   <meta name="twitter:card" content="summary_large_image">
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta property="og:description" content="A collection of icebreaking questions from around the web">
   <meta property="og:image" content="https://rendall.github.io/icebreakers/images/1200x1200.png">
-  <meta property="og:title" content="Icebreakers">
+  <meta property="og:title" content="KnowBetter Based on Icebreakers">
   <meta property="og:url" content="https://rendall.github.io/icebreakers/">
   <link rel="icon" type="image/png" href="favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
