--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>KnowBetter based on Icebreakers</title>
+  <title>Icebreakers</title>
   <meta charset="utf-8" />
   <meta name="description" content="A collection of icebreaking questions from around the web" />
   <meta name="twitter:card" content="summary_large_image">
@@ -10,10 +10,10 @@
   <meta name="twitter:image" content="https://rendall.github.io/icebreakers/images/1200x675.png">
   <meta name="twitter:site" content="@rendall">
   <meta name="twitter:title" content="Icebreakers">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:description" content="A collection of icebreaking questions from around the web">
   <meta property="og:image" content="https://rendall.github.io/icebreakers/images/1200x1200.png">
-  <meta property="og:title" content="KnowBetter Based on Icebreakers">
+  <meta property="og:title" content="Icebreakers">
   <meta property="og:url" content="https://rendall.github.io/icebreakers/">
   <link rel="icon" type="image/png" href="favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,12 +26,12 @@
   </main>
   <footer>
     <button id="reload-button" class="footer-col-2">
-      Pertanyaan Lain deh
+      Pick another question
     </button>
     <ul class="footer-col-1">
       <li>
-        <label>Iseng2nya
-          <a id="post-link" data-origin="https://simple-comment.netlify.app/icebreakers" href="#" target="_blank" >Kalvin</a>
+        <label>Got a nice answer? 
+          <a id="post-link" data-origin="https://simple-comment.netlify.app/icebreakers" href="https://simple-comment.netlify.app" target="_blank" >Share it!</a>
         </label>
       </li>
       <li>
@@ -43,7 +43,7 @@
     <div class="footer-col-3">
       <ul>
         <li>
-          <a href="https://github.com/rendall/icebreakers#readme"><em> KnowBetter</em> is based on <em>Icebreakers</em></a>
+          <a href="https://github.com/rendall/icebreakers#readme"><em>Icebreakers</em> is open source!</a>
         </li>
         <li>
           <a href="https://rendall.github.io/icebreakers">rendall.github.io/&#8203;icebreakers</a>
