--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
-<!doctype html><html lang="en"><head><title>KnowBetter based on Icebreakers</title><script defer src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script><meta charset="utf-8"/><meta name="description" content="A collection of icebreaking questions from around the web"/><meta name="twitter:card" content="summary_large_image"><meta name="twitter:description" content="A collection of icebreaking questions from around the web"><meta name="twitter:image" content="https://rendall.github.io/icebreakers/images/1200x675.png"><meta name="twitter:site" content="@rendall"><meta name="twitter:title" content="Icebreakers"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta property="og:description" content="A collection of icebreaking questions from around the web"><meta property="og:image" content="https://rendall.github.io/icebreakers/images/1200x1200.png"><meta property="og:title" content="Icebreakers"><meta property="og:url" content="https://rendall.github.io/icebreakers/"><link rel="icon" type="image/png" href="favicon.svg"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><script defer="defer" src="main.js?v=2"></script><link href="main.css" rel="stylesheet"></head><body><main><h2 id="question-display">...</h2></main><footer><button id="reload-button" class="footer-col-2">Ganti Pertanyaan Lain</button><ul class="footer-col-1"><li><label>Got a nice answer? <a id="post-link" href="#" target="_blank">Share it!</a></label></li><li><label>Iseng2nya <a id="credit-link" href=""></a></label></li></ul><div class="footer-col-3"><ul><li><a href="https://github.com/rendall/icebreakers#readme"><em>KnowBetter </em> based on <em>Icebreakers</em></a></li><li><a href="https://rendall.github.io/icebreakers">rendall.github.io/&#8203;icebreakers</a></li></ul><button id="change-theme-button" title="Change color theme" aria-label="Change color theme"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve"><g><path d="M32,61c-7.8,0-15.2-3.1-20.7-8.7c-5.5-5.6-8.5-13-8.3-20.8C3.2,16.5,15.2,4,30.2,3.1c10.8-0.7,20.7,4.5,26.4,13.5   c0.6,0.9,0.6,2,0.1,3c-0.6,1.1-1.8,1.7-3.1,1.5C53,21,52.5,21,52,21c-5.9,0-10.8,4.8-11,10.6c-0.1,3,1,5.9,3.1,8   C46.2,41.8,49,43,52,43c0.5,0,1,0,1.5-0.1c1.3-0.2,2.5,0.4,3.1,1.5c0.5,1,0.5,2.1-0.1,3C51.2,55.9,42,61,32,61z M32,5   c-0.6,0-1.1,0-1.7,0.1C16.3,5.9,5.2,17.6,5,31.6c-0.1,7.3,2.6,14.2,7.8,19.4C17.9,56.1,24.7,59,32,59c9.3,0,17.9-4.7,22.8-12.6   c0.3-0.4,0.1-0.8,0-1c-0.2-0.3-0.6-0.6-1.1-0.5C53.2,45,52.6,45,52,45c-3.6,0-6.9-1.4-9.3-4c-2.5-2.6-3.8-5.9-3.6-9.5   c0.2-6.9,6-12.5,12.9-12.6l0.1,0c0.6,0,1.2,0,1.8,0.1c0.5,0.1,0.9-0.2,1.1-0.5c0.1-0.2,0.2-0.5,0-0.9C49.9,9.7,41.3,5,32,5z"/><path d="M31,55c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S34.3,55,31,55z M31,45c-2.2,0-4,1.8-4,4s1.8,4,4,4s4-1.8,4-4S33.2,45,31,45z"/><path d="M16,46c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S18.2,46,16,46z M16,40c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S17.1,40,16,40z"/><path d="M12,34c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S14.2,34,12,34z M12,28c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S13.1,28,12,28z"/><path d="M18,22c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S20.2,22,18,22z M18,16c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S19.1,16,18,16z"/><path d="M30,16c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S32.2,16,30,16z M30,10c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S31.1,10,30,10z"/></g></svg></button></div></footer></body></html>
+<!doctype html><html lang="en"><head><title>KnowBetter based on Icebreakers</title><script defer src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script><meta charset="utf-8"/><meta name="description" content="A collection of icebreaking questions from around the web"/><meta name="twitter:card" content="summary_large_image"><meta name="twitter:description" content="A collection of icebreaking questions from around the web"><meta name="twitter:image" content="https://rendall.github.io/icebreakers/images/1200x675.png"><meta name="twitter:site" content="@rendall"><meta name="twitter:title" content="Icebreakers"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta property="og:description" content="A collection of icebreaking questions from around the web"><meta property="og:image" content="https://rendall.github.io/icebreakers/images/1200x1200.png"><meta property="og:title" content="Icebreakers"><meta property="og:url" content="https://rendall.github.io/icebreakers/"><link rel="icon" type="image/png" href="favicon.svg"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><script defer="defer" src="main.js?v=2"></script><!-- Place this AFTER the existing main.js include -->
+<script>
+(function () {
+  // --- Config: keep these in sync with your footer/branding ---
+  const CREDIT_NAME = 'Kalvin';
+  const CREDIT_URL  = 'https://www.linkedin.com/in/hikalvin/';
+  const WATERMARK_1 = `Iseng2nya ${CREDIT_NAME} — ${CREDIT_URL}`;
+  const WATERMARK_2 = 'KnowBetter based on Icebreakers';
+
+  const CAPTURE_SELECTOR = 'main'; // includes the footer credit label
+
+  // Ensure the footer credit link is set
+  document.addEventListener('DOMContentLoaded', () => {
+    const creditEl = document.getElementById('credit-link');
+    if (creditEl) {
+      creditEl.href = CREDIT_URL;
+      creditEl.textContent = CREDIT_NAME;
+      creditEl.rel = 'noopener noreferrer';
+      creditEl.target = '_blank';
+    }
+  });
+
+  function getComputedBgColor(el) {
+    const bg = getComputedStyle(el).backgroundColor;
+    if (!bg || bg === 'rgba(0, 0, 0, 0)' || bg === 'transparent') {
+      return getComputedStyle(document.body).backgroundColor || '#ffffff';
+    }
+    return bg;
+  }
+
+  async function captureShareImage() {
+    const target = document.querySelector(CAPTURE_SELECTOR) || document.body;
+    const scale = window.devicePixelRatio > 1 ? 2 : 1;
+    const canvas = await html2canvas(target, {
+      backgroundColor: getComputedBgColor(target),
+      scale
+    });
+
+    // draw watermark strip
+    const ctx = canvas.getContext('2d');
+    const padding = Math.round(16 * scale);
+    const lineGap = Math.round(8 * scale);
+    const fontSmall = Math.max(12 * scale, 14);
+    const fontTiny  = Math.max(10 * scale, 12);
+    const stripHeight = padding * 2 + fontSmall + lineGap + fontTiny;
+
+    ctx.fillStyle = 'rgba(255,255,255,0.85)';
+    ctx.fillRect(0, canvas.height - stripHeight, canvas.width, stripHeight);
+    ctx.fillStyle = '#000';
+    ctx.textBaseline = 'alphabetic';
+
+    ctx.font = `bold ${fontSmall}px system-ui, -apple-system, Segoe UI, Roboto, Arial`;
+    ctx.fillText(WATERMARK_1, padding, canvas.height - padding - fontTiny - lineGap);
+
+    ctx.font = `normal ${fontTiny}px system-ui, -apple-system, Segoe UI, Roboto, Arial`;
+    ctx.fillText(WATERMARK_2, padding, canvas.height - padding);
+
+    const blob = await new Promise((res) => canvas.toBlob(res, 'image/png', 1));
+    const file = new File([blob], 'icebreaker.png', { type: 'image/png' });
+    return { blob, file };
+  }
+
+  function downloadBlobAsFile(blob, filename) {
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = filename;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(url);
+  }
+
+  async function copyImageToClipboard(blob) {
+    if (!navigator.clipboard || !window.ClipboardItem) throw new Error('Clipboard image not supported');
+    const item = new ClipboardItem({ 'image/png': blob });
+    await navigator.clipboard.write([item]);
+  }
+
+  async function doShare() {
+    const questionText = (document.getElementById('question-display')?.innerText || '').trim();
+    const pageUrl = location.href;
+
+    try {
+      const { blob, file } = await captureShareImage();
+
+      // Best path (Android Chrome / some desktop browsers):
+      if (navigator.canShare && navigator.canShare({ files: [file] })) {
+        await navigator.share({
+          files: [file],
+          title: 'Icebreaker',
+          text: questionText || 'Icebreaker question'
+        });
+        return;
+      }
+
+      // Fallbacks:
+      // 1) Try copying image to clipboard (handy for pasting into apps)
+      try { await copyImageToClipboard(blob); } catch {}
+
+      // 2) Download for manual upload (covers Instagram Stories / TikTok reliably)
+      downloadBlobAsFile(blob, 'icebreaker.png');
+
+      // 3) Also share the page URL where image was generated
+      if (navigator.share) {
+        await navigator.share({ title: 'Icebreaker', text: questionText, url: pageUrl });
+      } else {
+        window.open(`https://www.linkedin.com/sharing/share-offsite/?url=${encodeURIComponent(pageUrl)}`, '_blank', 'noopener,noreferrer');
+      }
+
+      alert(
+        "We saved the image for you. Open Instagram or TikTok and upload it (Stories/Feed as you prefer)."
+      );
+    } catch (err) {
+      console.error(err);
+      alert('Sharing failed. Please try again or save the image and share it manually.');
+    }
+  }
+
+  // Unbind any previous listeners and bind ours (prevents double-trigger)
+  function rebindShareButtons() {
+    const share = document.getElementById('post-link');
+    const dl    = document.getElementById('download-link');
+    const copy  = document.getElementById('copy-link');
+
+    if (share) {
+      const clone = share.cloneNode(true);
+      share.replaceWith(clone);
+      clone.addEventListener('click', (e) => { e.preventDefault(); doShare(); });
+    }
+    if (dl) {
+      const clone = dl.cloneNode(true);
+      dl.replaceWith(clone);
+      clone.addEventListener('click', async (e) => {
+        e.preventDefault();
+        const { blob } = await captureShareImage();
+        downloadBlobAsFile(blob, 'icebreaker.png');
+      });
+    }
+    if (copy) {
+      const clone = copy.cloneNode(true);
+      copy.replaceWith(clone);
+      clone.addEventListener('click', async (e) => {
+        e.preventDefault();
+        try {
+          const { blob } = await captureShareImage();
+          await copyImageToClipboard(blob);
+          alert('Image copied. You can paste it into supported apps.');
+        } catch {
+          alert('Copy failed. Please use Download instead.');
+        }
+      });
+    }
+  }
+
+  document.addEventListener('DOMContentLoaded', rebindShareButtons);
+})();
+</script>
+<link href="main.css" rel="stylesheet"></head><body><main><h2 id="question-display">...</h2></main><footer><button id="reload-button" class="footer-col-2">Ganti Pertanyaan Lain</button><ul class="footer-col-1"><li><label>Got a nice answer? <ul class="actions">
+  <li><a id="post-link" href="#" target="_blank">Share it!</a></li>
+  <li><a id="download-link" href="#">Download image</a></li>
+  <li><a id="copy-link" href="#">Copy image</a></li>
+  <li><label>Iseng2nya <a id="credit-link" href=""></a></label></li>
+</ul>
+</label></li><li><label>Iseng2nya <a id="credit-link" href=""></a></label></li></ul><div class="footer-col-3"><ul><li><a href="https://github.com/rendall/icebreakers#readme"><em>KnowBetter </em> based on <em>Icebreakers</em></a></li><li><a href="https://rendall.github.io/icebreakers">rendall.github.io/&#8203;icebreakers</a></li></ul><button id="change-theme-button" title="Change color theme" aria-label="Change color theme"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve"><g><path d="M32,61c-7.8,0-15.2-3.1-20.7-8.7c-5.5-5.6-8.5-13-8.3-20.8C3.2,16.5,15.2,4,30.2,3.1c10.8-0.7,20.7,4.5,26.4,13.5   c0.6,0.9,0.6,2,0.1,3c-0.6,1.1-1.8,1.7-3.1,1.5C53,21,52.5,21,52,21c-5.9,0-10.8,4.8-11,10.6c-0.1,3,1,5.9,3.1,8   C46.2,41.8,49,43,52,43c0.5,0,1,0,1.5-0.1c1.3-0.2,2.5,0.4,3.1,1.5c0.5,1,0.5,2.1-0.1,3C51.2,55.9,42,61,32,61z M32,5   c-0.6,0-1.1,0-1.7,0.1C16.3,5.9,5.2,17.6,5,31.6c-0.1,7.3,2.6,14.2,7.8,19.4C17.9,56.1,24.7,59,32,59c9.3,0,17.9-4.7,22.8-12.6   c0.3-0.4,0.1-0.8,0-1c-0.2-0.3-0.6-0.6-1.1-0.5C53.2,45,52.6,45,52,45c-3.6,0-6.9-1.4-9.3-4c-2.5-2.6-3.8-5.9-3.6-9.5   c0.2-6.9,6-12.5,12.9-12.6l0.1,0c0.6,0,1.2,0,1.8,0.1c0.5,0.1,0.9-0.2,1.1-0.5c0.1-0.2,0.2-0.5,0-0.9C49.9,9.7,41.3,5,32,5z"/><path d="M31,55c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S34.3,55,31,55z M31,45c-2.2,0-4,1.8-4,4s1.8,4,4,4s4-1.8,4-4S33.2,45,31,45z"/><path d="M16,46c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S18.2,46,16,46z M16,40c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S17.1,40,16,40z"/><path d="M12,34c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S14.2,34,12,34z M12,28c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S13.1,28,12,28z"/><path d="M18,22c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S20.2,22,18,22z M18,16c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S19.1,16,18,16z"/><path d="M30,16c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4S32.2,16,30,16z M30,10c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S31.1,10,30,10z"/></g></svg></button></div></footer></body></html>
